# C-OpenGL-2D-Game

./: CMakeLists.txt  README.md  conanfile.txt
Resources/shaders/: ambient sprites.frag  ambient sprites.vert  color.frag  color.vert  default.frag  default.vert  sprites.frag  sprites.vert  sprites2.vert  text.frag  text.vert  ui sprites.frag  ui sprites.vert
src/: AudioManager.cpp  AudioManager.h  Colliders.h  EBO.cpp  EBO.h  Game.cpp  Game.h  GameEntities.h  GameObjects.h  Physics.cpp  Physics.h  SSBO.cpp  SSBO.h  ShaderClass.cpp  ShaderClass.h  Textures.cpp  Textures.h  UBO.cpp  UBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp
